# bevy-hex-sandbox

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/: kenney.tileset.ron
assets/kenney_hexagon-kit/: building_cabin.glb  building_castle.glb  building_dock.glb  building_farm.glb  building_market.glb  building_mill.glb  building_sheep.glb  building_smelter.glb  building_wall.glb  building_water.glb  dirt.glb  dirt_lumber.glb  grass_forest.glb  grass_hill.glb  path_corner.glb  path_cornerSharp.glb  path_crossing.glb  path_end.glb  path_intersectionA.glb  path_intersectionB.glb  path_intersectionC.glb  path_intersectionD.glb  path_intersectionE.glb  path_intersectionF.glb  path_intersectionG.glb  path_intersectionH.glb  path_start.glb  path_straight.glb  river_corner.glb  river_cornerSharp.glb  river_crossing.glb  river_end.glb  river_intersectionA.glb  river_intersectionB.glb  river_intersectionC.glb  river_intersectionD.glb  river_intersectionE.glb  river_intersectionF.glb  river_intersectionG.glb  river_intersectionH.glb  (+17 more)
src/: constants.rs  file_picker.rs  lib.rs  map.rs  persistence.rs  thumbnail_render.rs  tileset.rs  ui.rs  util.rs
src/ui/: widget.rs  widgets.rs
