[package]
name = "hex_sandbox"
version = "0.1.0"
edition = "2021"

[profile.release]
# debug = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
debug = true

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
# egui = { path = '../vendor/egui/crates/egui/' }
# leafwing-input-manager = { path = "../vendor/leafwing-input-manager/", features = ["egui"] }
# bevy_save = { path = "../vendor/bevy_save/" }

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"] }
leafwing-input-manager = { version = "0.9.2", features = ["egui"] }
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly", rev = "05c0eef23bec8c61efca2920004c61f081f815d0" }
bevy-inspector-egui = "0.18.3"
# blocked https://github.com/aevyrie/bevy_mod_picking/pull/231
bevy_mod_picking = { version = "0.13.0", default-features = false, features = ["backend_raycast", "backend_egui", "debug"] }
bevy_egui = "0.20.3"
bevy_tweening = "0.7.0"
bevy-scene-hook = "6.0.0"
bevy_polyline = "0.6.0"
bevy_mod_sysfail = "2.0.0"
bevy_mod_debugdump = "0.7.0"
hexx = { version = "0.6.0", features = ["ser_de"] }
serde = "1.0.160"
test-log = { version = "0.2.11", features = ["trace"], default-features = false }
anyhow = "1.0.71"
catppuccin-egui = "2.0.1"
egui = "0.21.0"
epaint = "0.21.0"
rfd = "0.11.4"
futures-lite = "1.13.0"
structopt = "0.3.26"
ron = "0.8.0"
chrono = "0.4.26"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
